<resources>
    <string name="app_name">Djinn List</string>
    <string name="view_djinni_caught">Obtained?</string>
    <string name="number">%d</string>
    <string name="golden_sun_name_1">Flint</string>
    <string name="golden_sun_element_1">Venus</string>
    <string name="golden_sun_flavor_1">Strike a blow that can cleave stone</string>
    <string name="golden_sun_location_1">World Map, South of Vale</string>
    <string name="golden_sun_catching_description_1">It is automatically acquired once you leave Vale and enter the
    overworld for the first time, where a cutscene has Flint talk to you and give a tutorial on how to use Djinn. It will join you
    no matter how many times you attempt to refuse it joining you, but its various responses may be amusing.</string>
    <string name="golden_sun_battle_effect_1" formatted="false">When Flint is used in battle, the user strongly attacks a target with
    a Venus-based attack equal in power to the user\'s normal physical attack increased by 60%.</string>
    <string name="golden_sun_set_bonus_1">When set, Flint increases the Adept\'s base HP by 8, base PP by 4, and base Attack by 3.</string>
    <string name="golden_sun_name_2">Forge</string>
    <string name="golden_sun_element_2">Mars</string>
    <string name="golden_sun_flavor_2">Boost party attack with flame\'s fury</string>
    <string name="golden_sun_location_2">Goma Cave</string>
    <string name="golden_sun_catching_description_2">Forge resides in Goma Cave, on an elevated ledge near a person bystanding on the
    ground level. An earth pillar near the bystander and the Djinni must be pushed right, then up onto the circular indentation in the
    ground where the pillar will stay permanently. Then the party continues to go through the dungeon, and will eventually make it to
    the elevated portion of the area where they can hop across the earth pillar and initiate the battle with Forge.</string>
    <string name="golden_sun_battle_effect_2" formatted="false">When Forge is used in battle, all currently active and alive Adepts get
    buffed with a 25% temporary increase to their respective attack ratings.</string>
    <string name="golden_sun_set_bonus_2">When set, Forge increases the Adept\'s base HP by 10, base Attack by 2, base Agility by 2,
    and base Luck by 2.</string>
    <string name="golden_sun_name_3">Gust</string>
    <string name="golden_sun_element_3">Jupiter</string>
    <string name="golden_sun_flavor_3">Attack with mighty wind gusts</string>
    <string name="golden_sun_location_3">Bilibin</string>
    <string name="golden_sun_catching_description_3">Gust is located in a cavern underneath the town of Bilibin. The gold statue of
    Lady McCoy in the center of the town conceals an entrance into the area, and can be moved aside so the entrance can be accessed;
    players will find out that though they can see Gust off to the right of the screen, they cannot reach it because of the placement
    of another gold statue against a wall. The actual method of getting to Gust is to go up the stairs to the right of the statue outside,
    and walk down until you\'re walking on top of the town\'s wooden gate permiter clockwise. A cave entrance at the west end of the town
    leads to the same underground cave, but now you stand just to the left of the gold statue. Cast Move to move the statue one space down,
    and now you can hop right to where Gust awaits.</string>
    <string name="golden_sun_battle_effect_3" formatted="false">When Gust is used in battle, the user attacks a target with a Jupiter-based
    attack equal in power to the user\'s normal physical attack with an aditional 10 damage points added to the result. There is then a
    chance that all of the resulting damage will be doubled, signified by a second strike to the attack visually.</string>
    <string name="golden_sun_set_bonus_3">When set, Gust increases the Adept\'s base HP by 9, base Attack by 2, and base Agility by 2.</string>
    <string name="golden_sun_name_4">Granite</string>
    <string name="golden_sun_element_4">Venus</string>
    <string name="golden_sun_flavor_4">Create a mighty earthen barrier</string>
    <string name="golden_sun_location_4">Kolima</string>
    <string name="golden_sun_catching_description_4">Granite is visible in the town of Kolima, fenced in a small enclosure next to one of the
    tree-houses, and you cannot reach it from the outside. To reach it, go behind the tree-house and walk down, so that you enter a secret
    back door into a small room. Following the ladder and the resultant underground cave trail (complete with random battles) leads you into the
    enclosed area with the Djinni ready for grabbing.</string>
    <string name="golden_sun_battle_effect_4" formatted="false">When Granite is used in battle, all currently active and alive Adepts are
    buffed for until the end of the turn with a protective effect that decreases all damage done to them from enemy attacks by 50%. This
    effect has the "strikes first" property, meaning it will be the first performed action in a given turn regardless of the agility rating
    of the user and any other unit in battle.</string>
    <string name="golden_sun_set_bonus_4">When set, Granite increases the Adept\'s base HP by 9, base Defense by 2, base Agility by 2, and
    base Luck by 1.</string>
    <string name="golden_sun_name_5">Breeze</string>
    <string name="golden_sun_element_5">Jupiter</string>
    <string name="golden_sun_flavor_5">Boost party resistance</string>
    <string name="golden_sun_location_5">Tret Tree</string>
    <string name="golden_sun_catching_description_5">Breeze resides in the Tret Tree dungeon-style location, in the upper-rightmost corner
    of the large exterior screen comprising of tree branches to climb up through. It is obscured by the leafy aspect of the scenery that gets
    cleared away by the "aura vision" surrounding Isaac as he approaches, so to know it is there you would have to walk up to the end of the
    topmost branches and reveal it. It must be battled to be acquired.</string>
    <string name="golden_sun_battle_effect_5" formatted="false">When Breeze is used in battle, all currently active and alive Adepts are
    buffed with an additional 40 resistance points to all their resistances.</string>
    <string name="golden_sun_set_bonus_5">When set, Breeze increases the Adept\'s base HP by 12, base PP by 5, base Defense by 2, and
    base Luck by 1.</string>
    <string name="golden_sun_name_6">Fever</string>
    <string name="golden_sun_element_6">Mars</string>
    <string name="golden_sun_flavor_6">Wrap a foe in feverish delusion</string>
    <string name="golden_sun_location_6">Imil</string>
    <string name="golden_sun_catching_description_6">Fever reposes in Imil Falls Cave, the tiny cavern at the town of Imil, reachable by sliding
    around through the frozen river and into the hole of the frozen waterfall. To reach there, first you have to stand in front of the snowman
    at the north end of the town and cast Move to shift it left and drop it onto the frozen river below. Then entering the river via the opening
    just to the right of the sanctum in the southwest part of town, slide right, up, left, up, left, up, right, up, left, up, right, and up
    to enter the opening. You automatically slide into Fever, and press A to immediately add it to your collection.</string>
    <string name="golden_sun_battle_effect_6" formatted="false">When Fever is used in battle, the user attacks a target and an orange cloud is
    let loose upon impact, dealing a Mars-based attack equal in power to the user\'s normal physical attack with an additional 30 damage points
    added to the result. There is then a chance that the target will be afflicted by Delusion.</string>
    <string name="golden_sun_set_bonus_6">When set, Fever increases the Adept\'s base HP by 8, base Attack by 3, and base Agility by 2.</string>
    <string name="golden_sun_name_7">Fizz</string>
    <string name="golden_sun_element_7">Mercury</string>
    <string name="golden_sun_flavor_7">Restore HP with calming water</string>
    <string name="golden_sun_location_7">Mercury Lighthouse</string>
    <string name="golden_sun_catching_description_7">Fizz is a Djinni that is automatically handed to you as you play through the game, being
    present on Mia as soon as she joins your party in Mercury Lighthouse somewhat early on in Golden Sun. Aside from Flint, Fizz is the only
    Djinni in the game that is impossible not to obtain.</string>
    <string name="golden_sun_battle_effect_7" formatted="false">When Fizz is used in battle, a targeted Adept on the player\'s side is cured
    by an amount equal to 60% of their maximum HP.</string>
    <string name="golden_sun_set_bonus_7">When set, Fizz increases the Adept\'s base HP by 9, base PP by 4, and base Defense by 3.</string>
    <string name="golden_sun_name_8">Sleet</string>
    <string name="golden_sun_element_8">Mercury</string>
    <string name="golden_sun_flavor_8">Drench a foe to drop its attack</string>
    <string name="golden_sun_location_8">Mercury Lighthouse</string>
    <string name="golden_sun_catching_description_8">Sleet is located in a hidden room behind one of the many waterfall-walls in a hallway
    immediately following a room where a pipe spout pushes open a massive section of wall to the left to reveal a door; you must press up
    against the wall so that you enter the room as though you walked through a house\'s door. It must be battled to be acquired.</string>
    <string name="golden_sun_battle_effect_8" formatted="false">When Sleet is used in battle, an image of a Mercury Djinni projects a stream
    of icy shards at the target, dealing a Mercury-based attack equal in power to the user\'s normal physical attack with an additional 30
    damage points added to the result. There is then a chance that the target\'s Attack rating will be temporarily reduced by 25%.</string>
    <string name="golden_sun_set_bonus_8">When set, Sleet increases the Adept\'s base HP by 12, base Attack by 3, and base Luck by 1.</string>
    <string name="golden_sun_name_9">Zephyr</string>
    <string name="golden_sun_element_9">Jupiter</string>
    <string name="golden_sun_flavor_9">Boost party Agility with a swift wind</string>
    <string name="golden_sun_location_9">Fuchin Falls Cave</string>
    <string name="golden_sun_catching_description_9">Zephyr is located in the Fuchin Falls Cave dungeon, in a room with water that is crossed by
    rolling logs. It shouldn\'t be hard to figure out how to reach it, which is by rolling on the top horizontal log down, rolling the lower left
    vertical log one space left, rolling the horizontal log back up, hopping to the lower left vertical log, and rolling it right. Zephyr must
    be battled to be obtained.</string>
    <string name="golden_sun_battle_effect_9" formatted="false">When Zephyr is used in battle, all currently active and alive Adepts get their
    Agility ratings temporarily buffed to +100%, the maximum agility bonus possible. It doubles everyone\'s speed, in other words.</string>
    <string name="golden_sun_set_bonus_9">When set, Zephyr increases the Adept\'s base HP by 10, base PP by 3, base Agility by 2, and base Luck
    by 1.</string>
    <string name="golden_sun_name_10">Quartz</string>
    <string name="djinni_detail_how_to_obtain">How to Obtain</string>
    <string name="djinni_detail_battle_effect">Battle Effect</string>
    <string name="djinni_detail_label_set_bonus">Set Bonus</string>
    <string name="profile_explanation">This is a summary of obtained Djinn in both games. Press an Elemental Star to find out about
    the djinn you\'re missing.</string>
    <string name="profile_golden_sun_label">Golden Sun Djinn Obtained</string>
    <string name="profile_lost_age_label">Lost Age Djinn Obtained</string>
    <string name="profile_reset_data">Reset Data</string>
</resources>