<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.scardenas.djinnlist.ui.DjinniDetailActivity"
    tools:showIn="@layout/activity_djinni_detail"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/djinni_detail_flavor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_spacing"
            android:padding="@dimen/medium_spacing"
            android:textSize="@dimen/text_normal"
            android:textStyle="italic"
            />

        <ImageView
            android:id="@+id/djinni_detail_location_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/large_spacing"
            android:scaleType="centerInside"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/medium_spacing"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/xsmall_spacing"
                android:text="@string/view_djinni_caught"
                android:textSize="@dimen/text_large"
                />

            <ImageView
                android:id="@+id/djinni_detail_caught_box"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:layout_marginLeft="@dimen/xsmall_spacing"
                android:src="@drawable/ic_djinni_not_caught"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/djinni_detail_label_how_to_obtain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_spacing"
            android:text="@string/djinni_detail_how_to_obtain"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xlarge"
            />

        <TextView
            android:id="@+id/djinni_detail_text_how_to_obtain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_spacing"
            android:textSize="@dimen/text_normal"
            />

        <TextView
            android:id="@+id/djinni_detail_label_battle_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_spacing"
            android:text="@string/djinni_detail_battle_effect"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xlarge"
            />

        <TextView
            android:id="@+id/djinni_detail_text_battle_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_spacing"
            android:textSize="@dimen/text_normal"
            />

        <TextView
            android:id="@+id/djinni_detail_label_set_bonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_spacing"
            android:text="@string/djinni_detail_label_set_bonus"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xlarge"
            />

        <TextView
            android:id="@+id/djinni_detail_text_set_bonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_spacing"
            android:textSize="@dimen/text_normal"
            />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
