<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context="com.example.scardenas.djinnlist.ui.ProfileActivity"
    >

    <LinearLayout
        android:id="@+id/profile_layout_summarize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:padding="@dimen/medium_spacing"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/large_spacing"
            android:text="@string/profile_explanation"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/large_spacing"
            android:text="@string/profile_golden_sun_label"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/medium_spacing"
            android:padding="@dimen/small_spacing"
            >

            <ImageView
                android:id="@+id/profile_golden_sun_venus_star"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@drawable/venus"
                />

            <TextView
                android:id="@+id/profile_golden_sun_venus_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/xsmall_spacing"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                />

            <ImageView
                android:id="@+id/profile_golden_sun_mars_star"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:layout_marginLeft="@dimen/xsmall_spacing"
                android:scaleType="centerInside"
                android:src="@drawable/mars"
                />

            <TextView
                android:id="@+id/profile_golden_sun_mars_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/xsmall_spacing"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                />

            <ImageView
                android:id="@+id/profile_golden_sun_jupiter_star"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:layout_marginLeft="@dimen/xsmall_spacing"
                android:scaleType="centerInside"
                android:src="@drawable/jupiter"
                />

            <TextView
                android:id="@+id/profile_golden_sun_jupiter_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/xsmall_spacing"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                />

            <ImageView
                android:id="@+id/profile_golden_sun_mercury_star"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:layout_marginLeft="@dimen/xsmall_spacing"
                android:scaleType="centerInside"
                android:src="@drawable/mercury"
                />

            <TextView
                android:id="@+id/profile_golden_sun_mercury_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/medium_spacing"
            android:text="@string/profile_lost_age_label"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/large_spacing"
            android:padding="@dimen/small_spacing"
            >

            <ImageView
                android:id="@+id/profile_lost_age_venus_star"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@drawable/venus"
                />

            <TextView
                android:id="@+id/profile_lost_age_venus_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/xsmall_spacing"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                />

            <ImageView
                android:id="@+id/profile_lost_age_mars_star"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:layout_marginLeft="@dimen/xsmall_spacing"
                android:scaleType="centerInside"
                android:src="@drawable/mars"
                />

            <TextView
                android:id="@+id/profile_lost_age_mars_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/xsmall_spacing"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                />

            <ImageView
                android:id="@+id/profile_lost_age_jupiter_star"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:layout_marginLeft="@dimen/xsmall_spacing"
                android:scaleType="centerInside"
                android:src="@drawable/jupiter"
                />

            <TextView
                android:id="@+id/profile_lost_age_jupiter_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/xsmall_spacing"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                />

            <ImageView
                android:id="@+id/profile_lost_age_mercury_star"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:layout_marginLeft="@dimen/xsmall_spacing"
                android:scaleType="centerInside"
                android:src="@drawable/mercury"
                />

            <TextView
                android:id="@+id/profile_lost_age_mercury_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/profile_btn_reset_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_accent_button"
            android:layout_marginTop="@dimen/large_spacing"
            android:paddingLeft="@dimen/small_spacing"
            android:paddingRight="@dimen/small_spacing"
            android:text="@string/profile_reset_data"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/profile_djinn_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_primary_dark"
        android:visibility="gone"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/profile_djinn_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </RelativeLayout>

</RelativeLayout>
